<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnReplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectBetAmount">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="358dp"
        android:layout_height="71dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:text="@string/selectMessage"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/remainingAmountMessage"
        android:layout_width="358dp"
        android:layout_height="71dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:text="@string/remainingAmountMessage"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeMessage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/remainingAmount"
        android:layout_width="358dp"
        android:layout_height="71dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/remainingAmount"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeMessage"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBet5"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/btnBet5"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/remainingAmountMessage"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBet10"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btnBet10"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/remainingAmountMessage"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBet20"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/btnBet20"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBet5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBetAll"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_marginTop="80dp"
        android:text="@string/btnBetAll"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBet50"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBet50"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btnBet50"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBet10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/betAmount"
        android:layout_width="358dp"
        android:layout_height="71dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/betAmount"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBet50"
        app:layout_constraintVertical_bias="0.261" />

    <Button
        android:id="@+id/btnSubmitBet"
        android:layout_width="196dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btnSubmitBet"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/betAmount"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="196dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btnBack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSubmitBet"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>