<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnReplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultScreen">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:text="@string/winTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postAmount"
        android:layout_width="383dp"
        android:layout_height="208dp"
        android:layout_marginTop="200dp"
        android:text="@string/winAmount"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle" />

    <TextView
        android:id="@+id/postBetAmount"
        android:layout_width="383dp"
        android:layout_height="208dp"
        android:layout_marginTop="100dp"
        android:text="@string/betAmount"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="217dp"
        android:layout_height="112dp"
        android:layout_marginTop="430dp"
        android:text="@string/btnNewGame"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>